--- a/scarev/index.css
+++ b/scarev/index.css
@@ -23,6 +23,11 @@ button {
 	border: solid 5px #448888FF;
 	border-radius: 5px;
 }
+.img2 {
+	background: repeating-linear-gradient(45deg,#404d9c,#404d9c 10px,#263278 10px,#363278 20px);
+	border: solid 5px #448888FF;
+	border-radius: 5px;
+}
 .leftinfo {
 	position: fixed;
 	width: 200px;
